fix: keyboard styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -8,34 +8,6 @@
   height: 100vh;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
   display: flex;
@@ -44,6 +16,7 @@
   align-items: center;
   justify-content: space-evenly;
   position: relative;
+  justify-self: center;
 }
 
 .read-the-docs {
